[CPP-119] Minimal CLI with rough Backend + Frontend coexistence. (#53)
* [CPP-119]Command Line Interface.

* App status.

* CLI working for installer+run

* Moving some qobjects out of main.py

* asdf

* Switchable tabs working.

* Fixing benchmarks.

* Respond to review requests.

* Respond to review requests.

* simpler FlowControl wrapper, wrap generated Tabs object (#54)

* Respond to review requests.

* simpler FlowControl wrapper, wrap generated Tabs object

Co-authored-by: John Michael Burke <johnmichael.burke@swift-nav.com>

* Respond to review requests.

* Respond to review requests.

* Support non-unix filepaths.

* Switch to enum variant py2many fork.

* uprevving py2many

Co-authored-by: Jason Mobarak <jason@swift-nav.com>

--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -26,6 +26,7 @@ glob = "0.3.0"
 criterion = "0.3.4"
 sysinfo = "0.16.4"
 serialport = { version = "4.0.1", default-features = false }
+clap = "3.0.0-beta.2"
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
