--- a/Makefile.toml
+++ b/Makefile.toml
@@ -266,10 +266,7 @@ ${QT_APP}/Qt/bin/qmllint -I ${QT_APP}/../PySide2/Qt/qml/ -I resources/ $QML_FILE
 
 [tasks.qml-format-check]
 dependencies = ["qml-format"]
-script_runner = "@shell"
-script = '''
-git diff --exit-code -- $QML_FILES
-'''
+run_task = "check-git-diff"
 
 [tasks.rust-format]
 dependencies = ["copy-capnp"]
@@ -329,10 +326,7 @@ conda run -n $CONDA_ENV pylint --output-format=parseable $PYTHON_FILES
 # on the version of taplo-cli installed, and needs to be manually updated.
 # https://github.com/sagiegurari/cargo-make/issues/571
 dependencies = ["format-toml"]
-script_runner = "@shell"
-script = '''
-git diff --exit-code
-'''
+run_task = "check-git-diff"
 
 [tasks.format-all]
 dependencies = [
@@ -347,19 +341,26 @@ dependencies = [
 alias = "format-all"
 
 [tasks.format-check]
-dependencies = [
-  "python-format-check",
-  "qml-format-check",
-  "rust-format-check",
-  "newline-check",
-  "format-toml-check",
-]
+dependencies = ["python-format-check", "rust-format-check", "newline-check"]
+run_task = "check-git-diff"
 
 [tasks.lint]
 dependencies = ["qml-lint", "python-lint", "rust-lint", "format-check"]
 
 [tasks.types]
 dependencies = ["python-type-check", "rust-type-check"]
+
+[tasks.check-all]
+dependencies = [
+  "poetry-export",
+  "pip-install-dev",
+  "generate-common-constants-rs",
+  "extract-piksi-constants-rs",
+  "format",
+  "lint",
+  "types",
+]
+run_task = "check-git-diff"
 
 [tasks.tests]
 dependencies = ["rust-tests"]
@@ -480,3 +481,8 @@ run_task = "newline-terminator"
 
 [tasks.newline-format]
 run_task = "newline-terminator"
+
+[tasks.check-git-diff]
+script_runner = "@shell"
+command = "git"
+args = ["diff", "--exit-code"]
