[CPP-155] SBP/ SBPJson/Solution Logging + LogBar (#64)
* Initial commit.

* Not working.

* SBP/Csv Logging.

* Increasing expected time (likely due to the performance drop in the logging mechanism).

* Respond to review requests.

* Reduce height of top level tabs.

* Respond to review requests.

* CLI args better UI behavior.

* Adding a few unittests.

* Fix lint.

* Hardcode windows cc/cxx paths for GA.

* Remove extra CC env vars.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           path: |
             ${{ env.RUST_CACHE_DIRS }}
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock', '**/console_backend.capnp') }}
 
       - uses: davidB/rust-cargo-make@v1
         with:
