--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,39 +3,39 @@ appdirs==1.4.4; python_full_version >= "3.6.2"
 astroid==2.5.6; python_version >= "3.6" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.5" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.4.0"
 attrs==21.2.0; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.5"
-black==21.5b1; python_full_version >= "3.6.2"
-click==7.1.2; python_full_version >= "3.6.2"
-colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.6" and python_version < "4.0" and sys_platform == "win32" and python_full_version >= "3.5.0"
+black==21.5b2; python_full_version >= "3.6.2"
+click==8.0.1; python_version >= "3.6" and python_full_version >= "3.6.2"
+colorama==0.4.4; python_version >= "3.6" and python_version < "4.0" and sys_platform == "win32" and python_full_version >= "3.6.2" and platform_system == "Windows"
 cython==0.29.23; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 fbs @ git+https://github.com/silverjam/fbs.git@master
-future==0.18.2; python_version >= "3.5" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.3.0"
+future==0.18.2; sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.6.0"
 isort==5.8.0; python_version >= "3.6" and python_version < "4.0"
 jedi==0.18.0; python_version >= "3.6"
 lazy-object-proxy==1.6.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
 macholib==1.14; sys_platform == "darwin" and python_version >= "3.5"
 mccabe==0.6.1; python_version >= "3.6" and python_version < "4.0"
-more-itertools==8.7.0; python_version >= "3.5"
+more-itertools==8.8.0; python_version >= "3.5"
 mypy-extensions==0.4.3; python_full_version >= "3.6.2" and python_version >= "3.5"
 mypy==0.790; python_version >= "3.5"
 nuitka==0.6.12.4
 packaging==20.9; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 parso==0.8.2; python_version >= "3.6"
 pathspec==0.8.1; python_full_version >= "3.6.2"
-pefile==2019.4.18; sys_platform == "win32" and python_version >= "3.5"
+pefile==2021.5.24; sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.6.0"
 pkgconfig==1.5.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 pluggy==0.13.1; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 psutil==5.8.0; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 py2many @ git+https://github.com/john-michaelburke/py2many@console ; python_version >= "3.8"
 py==1.10.0; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
-pycapnp @ git+https://github.com/jayvdb/pycapnp.git@hook-if-file-exists
+pycapnp @ git+https://github.com/jayvdb/pycapnp.git@bare-except
 pyinstaller-hooks-contrib==2021.1; python_version >= "3.5"
 pyinstaller==4.2; python_version >= "3.5"
-pylint==2.8.2; python_version >= "3.6" and python_version < "4.0"
+pylint==2.8.3; python_version >= "3.6" and python_version < "4.0"
 pyparsing==2.4.7; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 pyside2==5.15.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "3.10")
 pytest==5.4.3; python_version >= "3.5"
 pywin32-ctypes==0.2.0; sys_platform == "win32" and python_version >= "3.5"
-qt5-applications==5.15.2.2.1; sys_platform == "linux"
+qt5-applications==5.15.2.2.2; python_version >= "3.5"
 regex==2021.4.4; python_full_version >= "3.6.2"
 semantic-version==2.8.5; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.5"
 setuptools-rust==0.11.6; python_version >= "3.5"
