--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -32,6 +32,8 @@ serde_yaml = "0.8.17"
 clap = "3.0.0-beta.2"
 indexmap = { version = "1.6.2", features = ["serde"] }
 serde_json = { version = "1" }
+timer = { version = "0.2.0" }
+
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
