--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -17,7 +17,8 @@ chrono = { version = "0.4", features = ["serde"] }
 csv = "1"
 paste = "1"
 pyo3 = { version = "0.13", features = ["extension-module"] }
-sbp = { git = "https://github.com/swift-nav/libsbp.git", rev = "a5c221684439f2124306a2daa44126aac5457c80", features = ["json", "swiftnav-rs"] }
+# sbp = { git = "https://github.com/swift-nav/libsbp.git", branch = "steve/console", features = ["json", "swiftnav-rs"] }
+sbp = { path = "../../libsbp/rust/sbp", features = ["json", "swiftnav-rs"] }
 serde = { version = "1.0.123", features = ["derive"] }
 tempfile = "3.2.0"
 ordered-float = "2.0"
@@ -32,6 +33,8 @@ serde_yaml = "0.8.17"
 clap = "3.0.0-beta.2"
 indexmap = { version = "1.6.2", features = ["serde"] }
 serde_json = { version = "1" }
+crossbeam = "0.8.1"
+rand = "0.8.3"
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
