--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -16,7 +16,7 @@ capnp = "0.14"
 chrono = { version = "0.4", features = ["serde"] }
 csv = "1"
 paste = "1"
-pyo3 = { version = "0.13", features = ["extension-module"] }
+pyo3 = { version = "0.13", features = ["extension-module"], optional = true }
 sbp = { git = "https://github.com/swift-nav/libsbp.git", rev = "ce5e3d14ae4284c53982bc3fd79a2fa15976ff9f", features = ["json", "swiftnav-rs"] }
 serde = { version = "1.0.123", features = ["derive"] }
 tempfile = "3.2.0"
@@ -55,7 +55,11 @@ name = "console_backend"
 crate-type = ["cdylib", "lib"]
 bench = false
 
+[[bin]]
+name = "fileio"
+path = "src/bin/fileio.rs"
+
 [features]
-default = []
+default = ["pyo3"]
 benches = []
 tests = []
