--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04
-          # - macos-10.15
+          - macos-10.15
           - windows-2019
 
     runs-on: ${{ matrix.os }}
