--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ Cython = "^0.29.21"
 nuitka = "<=0.6.12.4"
 psutil = "5.8.0"
 qt5-applications = [{ version = "^5.15.2" }]
-py2many = { git = "https://github.com/john-michaelburke/py2many", rev = "console" }
+py2many = { git = "https://github.com/adsharma/py2many.git", rev = "main" }
 
 [build-system]
 requires = [
