Makefile.toml: Add qml-lint

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -253,6 +253,13 @@ script = '''
 ${QT_APP}/Qt/bin/qmlformat -i $QML_FILES
 '''
 
+[tasks.qml-lint]
+env = { QT_APP = { script = ["conda run -n $CONDA_ENV python utils/echo-qt-dir.py"] } }
+script_runner = "@shell"
+script = '''
+${QT_APP}/Qt/bin/qmllint -I ${QT_APP}/../PySide2/Qt/qml/ -I resources/ $QML_FILES
+'''
+
 [tasks.qml-format-check]
 dependencies = ["qml-format"]
 script_runner = "@shell"
@@ -342,7 +349,7 @@ dependencies = [
 ]
 
 [tasks.lint]
-dependencies = ["python-lint", "rust-lint", "format-check"]
+dependencies = ["qml-lint", "python-lint", "rust-lint", "format-check"]
 
 [tasks.types]
 dependencies = ["python-type-check", "rust-type-check"]
