--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,18 +11,17 @@ fbs = { git = "https://github.com/silverjam/fbs.git" }
 pycapnp = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
-black = "^21.5b0"
+black = "^21.6b0"
 jedi = "^0.18.0"
-mypy = "^0.790"
-pylint = "^2.6.0"
-pytest = "^5.4.3"
-setuptools-rust = "^0.11.6"
-pkgconfig = "^1.5.1"
-Cython = "^0.29.21"
+mypy = "^0.910"
+pylint = "^2.9.3"
+pytest = "^6.2.4"
+setuptools-rust = "^0.12.1"
 nuitka = "<=0.6.12.4"
 psutil = "5.8.0"
 qt5-applications = [{ version = "^5.15.2" }]
-py2many = { git = "https://github.com/adsharma/py2many.git", rev = "main" }
+py2many = ">=0.3"
+types-requests = "^2.25.0"
 
 [build-system]
 requires = [
