--- a/Makefile.toml
+++ b/Makefile.toml
@@ -150,12 +150,6 @@ dependencies = [
 ]
 run_task = "start-console"
 
-[tasks.setuptools-rust]
-script_runner = "@shell"
-script = '''
-conda run -n $CONDA_ENV python -m pip install setuptools-rust==0.11.6
-'''
-
 [tasks.install-backend]
 script_runner = "@shell"
 script = '''
@@ -169,12 +163,7 @@ conda run -n $CONDA_ENV --no-capture-output --live-stream python -m pip install 
 '''
 
 [tasks.prod-freeze-no-copy]
-dependencies = [
-  "copy-capnp",
-  "generate-resources",
-  "setuptools-rust",
-  "prod-install-backend",
-]
+dependencies = ["copy-capnp", "generate-resources", "prod-install-backend"]
 script_runner = "@shell"
 script = '''
 conda run -n $CONDA_ENV fbs freeze
