--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -287,7 +287,7 @@ jobs:
           environment-file: conda.yml
           python-version: ${{ env.CONDA_BASE_VERSION }}
           auto-activate-base: false
-          # miniconda-version: 'py38_4.10.3'
+          miniconda-version: 'py38_4.10.3'
 
       - name: Build ${{ runner.os }} Binaries.
         shell: bash
