--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [workspace]
-members = ["console_backend"]
+members = ["console_backend", "web/src-tauri"]
+default-members = ["console_backend"]
+resolver = "2"
 
 [profile.release]
 lto = true
